--- a/1.html
+++ b/1.html
@@ -1,2 +1,14 @@
 <h2> hello world </h2>
 <P> hello world</P>
+
+
+
+<div id ="section1">   
+    <h5> Section 1</h5>
+    
+</div>
+
+<div id ="section2">   
+    <h5> Section 2</h5>
+    
+</div>
