--- a/1.html
+++ b/1.html
@@ -1,14 +1,16 @@
 <h2> hello world </h2>
 <P> hello world</P>
 
+<a href="#section1">section1</a>
+<a href="#section2">section2</a>
 
 
 <div id ="section1">   
     <h5> Section 1</h5>
-    
+    <img src = logo_UCSD.png alt =  "This is the logo of ucsd">
 </div>
 
 <div id ="section2">   
     <h5> Section 2</h5>
-    
+    <img src = logos-college-logos-07-23.svg alt =  "This is the logo of ucsd colleges">
 </div>
