task 2 not finished

--- a/1.html
+++ b/1.html
@@ -1,16 +1,30 @@
-<h2> hello world </h2>
+
+<head>
+    <link rel="stylesheet" href="styles.css">
+
+</head>
+
+<body>
+<div id = "navbar">
+    <a href="#section1">section1</a>
+    <a href="#section2">section2</a>
+</div>
+    
+
+<h2 id = "h2"> hello world </h2>
 <P> hello world</P>
 
-<a href="#section1">section1</a>
-<a href="#section2">section2</a>
-
-
-<div id ="section1">   
+<div class = "block" id = "section1">   
     <h5> Section 1</h5>
-    <img src = logo_UCSD.png alt =  "This is the logo of ucsd">
+    <img src = "logo_UCSD.png" alt =  "This is the logo of ucsd">
 </div>
 
-<div id ="section2">   
-    <h5> Section 2</h5>
-    <img src = logos-college-logos-07-23.svg alt =  "This is the logo of ucsd colleges">
+<div class = "block" id = "section2">   
+    <h5 id = "sec2-header"> Section 2</h5>
+    <p id = "sec2-paragraph"> This it all the colleges of ucsd. 
+        Every student here is admitted into one of them. For example, I'm from Revelle</p>
+    <img id = "sec2-img" src = "logos-college-logos-07-23.svg" alt =  "This is the logo of ucsd colleges">
 </div>
+
+</body>
+
