--- a/1.html
+++ b/1.html
@@ -1,29 +1,51 @@
 
 <head>
     <link rel="stylesheet" href="styles.css">
-
 </head>
 
 <body>
+    <img src = "https://www.ucsd.edu/_resources/img/logo_UCSD.png">
 <div id = "navbar">
-    <a href="#section1">section1</a>
-    <a href="#section2">section2</a>
+    <nav>
+        <ul>
+            <li><a href="#section1"> section1 </a></li>
+            <li><a href="#section2"> section2 </a></li>
+            <li><a href="#section3"> section3 </a></li>
+        </ul>
+    </nav>
 </div>
     
-
-<h2 id = "h2"> hello world </h2>
-<P> hello world</P>
-
-<div class = "block" id = "section1">   
-    <h5> Section 1</h5>
-    <img src = "logo_UCSD.png" alt =  "This is the logo of ucsd">
+<div class = "sections" id = "section1">   
+    <h2> Section 1</h2>
+    <img src = "https://brand.ucsd.edu/_images/logos-and-brand-elements/additional-campus-logos/ucsd-athletics-logo.svg" alt =  "This is the logo of ucsd">
+    <p></p>
 </div>
 
-<div class = "block" id = "section2">   
-    <h5 id = "sec2-header"> Section 2</h5>
-    <p id = "sec2-paragraph"> This it all the colleges of ucsd. 
+<div class = "sections" id = "section2">   
+    <h2> Section 2</h2>
+    <p> This it all the colleges of ucsd. 
         Every student here is admitted into one of them. For example, I'm from Revelle</p>
-    <img id = "sec2-img" src = "logos-college-logos-07-23.svg" alt =  "This is the logo of ucsd colleges">
+    <img id = "sec2-img" src = "https://brand.ucsd.edu/_images/logos/logos-college-logos-07-23.svg" alt =  "This is the logo of ucsd colleges">
+</div>
+
+<div class = "sections" id = "section3">
+    <h2> Section 3</h2>
+    <p id ="introduction"> The University of California, San Diego (UCSD) is a public research university in La Jolla, California:
+        Location
+        The main campus is located on 1,200 acres of coastal woodland near the Pacific Ocean.
+        History
+        Founded in 1960, UCSD is one of the ten campuses of the University of California.
+        Academics
+        UCSD offers over 200 undergraduate and graduate degree programs, including the Scripps Institution of Oceanography and the UC San Diego Health System.
+        Rankings
+        UCSD is recognized as one of the top 20 research universities in the world. It's also ranked first in the nation for research, civic engagement, and social mobility.
+        Student life
+        UCSD has over 600 student organizations, and 1 in 3 undergraduates study abroad.
+        Health system
+        The UC San Diego Health System includes more than 1,500 doctors and scientists, including 50 members of the National Academy of Medicine.
+        Campus life
+        UCSD has performance venues, fitness classes, and other ways to find community and have fun. 
+    </p>
 </div>
 
 </body>
