--- a/1.html
+++ b/1.html
@@ -1,18 +1,20 @@
 
 <head>
     <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
+<div class = "sections">
     <img src = "https://www.ucsd.edu/_resources/img/logo_UCSD.png">
-<div id = "navbar">
-    <nav>
-        <ul>
-            <li><a href="#section1"> section1 </a></li>
-            <li><a href="#section2"> section2 </a></li>
-            <li><a href="#section3"> section3 </a></li>
-        </ul>
-    </nav>
+</div>
+    
+<div class = "sections" id = "navbar">
+    <ul>
+        <li><a href="#section1"> Section 1 </a></li>
+        <li><a href="#section2"> Section 2 </a></li>
+        <li><a href="#section3"> Section 3 </a></li>
+    </ul>
 </div>
     
 <div class = "sections" id = "section1">   
@@ -28,24 +30,18 @@
     <img id = "sec2-img" src = "https://brand.ucsd.edu/_images/logos/logos-college-logos-07-23.svg" alt =  "This is the logo of ucsd colleges">
 </div>
 
-<div class = "sections" id = "section3">
-    <h2> Section 3</h2>
-    <p id ="introduction"> The University of California, San Diego (UCSD) is a public research university in La Jolla, California:
-        Location
-        The main campus is located on 1,200 acres of coastal woodland near the Pacific Ocean.
-        History
-        Founded in 1960, UCSD is one of the ten campuses of the University of California.
-        Academics
-        UCSD offers over 200 undergraduate and graduate degree programs, including the Scripps Institution of Oceanography and the UC San Diego Health System.
-        Rankings
-        UCSD is recognized as one of the top 20 research universities in the world. It's also ranked first in the nation for research, civic engagement, and social mobility.
-        Student life
-        UCSD has over 600 student organizations, and 1 in 3 undergraduates study abroad.
-        Health system
-        The UC San Diego Health System includes more than 1,500 doctors and scientists, including 50 members of the National Academy of Medicine.
-        Campus life
-        UCSD has performance venues, fitness classes, and other ways to find community and have fun. 
-    </p>
+<div class="sections" id="section3">
+    <h2>Section 3</h2>
+    <div class="grid-container">
+        <div class="grid-item"><P>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</P> </div>
+
+        <div class="grid-item"><P>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</P> </div>
+
+        <div class="grid-item"><P>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</P> </div>
+
+        <div class="grid-item"><P>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</P> </div>
+
+    </div>
 </div>
 
 </body>
