--- a/1.html
+++ b/1.html
@@ -1,12 +1,13 @@
 
 <head>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
 
 </head>
 
 <body>
 <div class = "sections">
-    <img src = "https://www.ucsd.edu/_resources/img/logo_UCSD.png">
+    <img src = "https://www.ucsd.edu/_resources/img/logo_UCSD.png" id ="logo">
 </div>
     
 <div class = "sections" id = "navbar">
